# advent-of-code

./: Cargo.toml  Justfile  LICENSE.md  README.md  flake.nix  justfile  rust-toolchain.toml
.config/: nextest.toml
.github/workflows/: ci.yml
2022/03/src/: lib.rs
2022/04/: Cargo.toml
2022/04/src/: lib.rs
2022/05/src/: lib.rs
2022/07/src/: lib.rs
2022/09/: Cargo.toml
2022/10/: Cargo.toml
2022/12/src/: lib.rs  map.rs  pathfinder.rs  place.rs
crates/advent-of-code/: Cargo.toml
crates/advent-of-code/src/: lib.rs
crates/cedar/src/: lib.rs
crates/ornament/: Cargo.toml
crates/ornament/src/: lib.rs  parsing.rs  puzzle.rs
crates/spruce/: Cargo.toml
puzzles/2015/: README.md
puzzles/2015-01/: Cargo.toml
puzzles/2015-02/: Cargo.toml
puzzles/2015-03/: Cargo.toml
puzzles/2015-04/: Cargo.toml
puzzles/2015-05/: Cargo.toml
puzzles/2015-06/: Cargo.toml
puzzles/2015-07/: Cargo.toml
puzzles/2015-08/: Cargo.toml
puzzles/2015-09/: Cargo.toml
puzzles/2015-1/: Cargo.toml
puzzles/2015-10/: Cargo.toml
puzzles/2015-11/: Cargo.toml
puzzles/2015-12/: Cargo.toml
puzzles/2015-13/: Cargo.toml
puzzles/2015-14/: Cargo.toml
puzzles/2015-15/: Cargo.toml
puzzles/2015-16/: Cargo.toml
puzzles/2015-18/: Cargo.toml
puzzles/2015-19/: Cargo.toml
puzzles/2015-2/: Cargo.toml
puzzles/2015-3/: Cargo.toml
puzzles/2015-4/: Cargo.toml
puzzles/2015-5/: Cargo.toml
puzzles/2015-6/: Cargo.toml
puzzles/2015-7/: Cargo.toml
puzzles/2015-8/: Cargo.toml
puzzles/2015-9/: Cargo.toml
puzzles/template/: Cargo.toml  input.txt
(+311 files in other folders)
