[workspace]
resolver = "3"
members = [
    "crates/*",
    "puzzles/2015/*",
    #"puzzles/2016/*",
    #"puzzles/2017/*",
    #"puzzles/2018/*",
    #"puzzles/2019/*",
    #"puzzles/2020/*",
    #"puzzles/2021/*",
    #"puzzles/2022/*",
    #"puzzles/2023/*",
    #"puzzles/2024/*",
]

[workspace.dependencies]
cedar = { path = "crates/cedar" }
