[workspace]
resolver = "3"
members = [
    "crates/*",
    "puzzles/template",
    "puzzles/2015/*",
    #"puzzles/2016/*",
    #"puzzles/2017/*",
    #"puzzles/2018/*",
    #"puzzles/2019/*",
    #"puzzles/2020/*",
    #"puzzles/2021/*",
    #"puzzles/2022/*",
    #"puzzles/2023/*",
    #"puzzles/2024/*",
]

[workspace.dependencies]
itertools = "0.14.0"
md-5 = "0.10.6"
nom = "8.0.0"
spruce = { path = "crates/spruce" }
