[workspace]
package.edition = "2024"
resolver = "3"
members = [
    "crates/*",
    "puzzles/template",
    "puzzles/2015/*",
    "puzzles/2016/*",
    "puzzles/2017/*",
    "puzzles/2018/*",
    "puzzles/2019/*",
    "puzzles/2020/*",
]

[workspace.dependencies]
spruce = { path = "crates/spruce" }
